--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action="https://formsubmit.co/praveen14641@email.com" method="POST">
+<form action="https://formsubmit.co/praveen14641@gmail.com" method="POST">
      <input type="text" name="name" required>
      <input type="email" name="email" required>
      <button type="submit">Send</button>
